<resources>
    <string name="app_name">GRIDx</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_sign_in">Sign in</string>
    <string name="button_sign_up">Sign up</string>
    <string name="button_send">Send</string>
    <string name="text_forgot_password">Forgot password?</string>
    <string name="text_signin_message">Hello, sign in to your account</string>
    <string name="text_signin_social_media">Or Sign in using social media</string>
    <string name="text_signup_social_media">Or Sign up using social media</string>
    <string name="text_signin_signup">Don\'t have an account? <b>Sign up</b></string>
    <string name="text_signup_terms">By signing up, you agree to our <b>terms and conditions</b></string>
    <string name="text_signup_message">Hello, let\'s set up your account</string>

    <string name="text_forgot_password_title">Forgot password? No worries</string>
    <string name="text_forgot_password_message">We will send you a link to reset your password</string>

    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_confirm_password">Confirm Password</string>

    <string name="ble_not_supported">ble unsupported</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="wifi">Wifi</string>

    <!--Login-->
    <string name="user">Username: </string>
    <string name="user_enter">Enter Credentials</string>
    <string name="pass">Password: </string>
    <string name="user_pass">Enter Password</string>
    <string name="btn_login">Login</string>
    <string name="logo">company_logo</string>

    <!--Graph-->
    <string name="graph">Graph</string>
    <string name="stats">Statistics</string>
    <string name="geyser">Geyser</string>
    <string name="recharge">Recharge</string>

    <string name="save">Save</string>
    <string name="duration">Duration</string>

    <string name="notifyTitle"> Notify Title</string>
    <string name="gpsNotifyMsg">Gps Notify Msg</string>
    <string name="setting">Setting</string>
    <string name="cancel">Cancel</string>
    <string name="start_scan">Start Scan</string>
    <string name="stop_scan">Stop Scan</string>


    <string name="please_open_blue">Please Open Blue</string>
    <string name="select_operation_type">Select Operation Type</string>
    <string name="characteristic">Characteristic</string>
    <string name="data_changed">Data Changed：</string>
    <string name="read">read</string>
    <string name="write">write</string>
    <string name="open_notification">Open Notification</string>
    <string name="close_notification">Close Notification</string>
    <string name="service_list">Service List</string>
    <string name="characteristic_list">Characteristic List</string>
    <string name="console">console</string>
    <string name="name">name：</string>
    <string name="mac">MAC:</string>
    <string name="service">Service</string>
    <string name="type">type(主服务)</string>
    <string name="scan_setting">Scan Setting</string>
    <string name="setting_name">Setting Name</string>
    <string name="setting_mac">Setting Mac</string>
    <string name="setting_uuid">Setting UUID</string>
    <string name="input_hex">Input Hex</string>
    <string name="connect">connect</string>
    <string name="connected">connected</string>
    <string name="disconnect">disconnect</string>
    <string name="enter">enter</string>
    <string name="connect_fail">Connect Fail</string>

    <string name="active_disconnected">Active Disconnect</string>
    <string name="disconnected">Disconnect</string>
    <string name="nowDateTime">1/02/2019</string>
    <string name="pwCosum">120KW</string>
    <string name="device_name">Device Name</string>
    <string name="service_name">Service Name</string>
    <string name="confirmBtn">Confirm</string>
    <string name="btn_scan">Scan</string>
    <string name="todo">TODO</string>
    <string name="Btn_monthly">Monthly</string>
    <string name="Btn_weekly">Weekly</string>
    <string name="Btn_daily">Daily</string>
    <string name="Btn_hourly">Hourly</string>
    <string name="usage_Btn_hourly">Hourly Usage</string>
    <string name="usage_Btn_monthly">Monthly Usage</string>
    <string name="usage_Btn_weekly">Weekly Usage</string>
    <string name="usage_Btn_daily">Daily</string>

    <string name="Btn_ConUpdate">Update</string>
    <string name="Btn_ConInitail">Initailize</string>

    <string name="geysey_manual_mode">Manual Mode</string>
    <string name="geysey_schedule_mode">Schedule Mode</string>

    <string name="Btn_Update">UPDATE</string>

    <string name="txt_Used">Used:</string>
    <string name="txt_Unit">KWhr</string>
    <string name="txt_remaining">Remaining:</string>
    <string name="txt_UnitReaming">KWHr</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_start">Start</string>
    <string name="hint_minute">Minute</string>
    <string name="message_minutes">Please Enter Minutes...</string>
    <string name="title_activity_line_chart">LineChart</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview">TextView</string>

    <string name="meter_name">Meter Name</string>
    <string name="meter_number">Meter Number</string>
    <string name="meter_cell_number">Meter Phone Number</string>
    <string name="supplier_name">Supplier</string>
    <string name="actount_reference">Your Reference</string>
    <string name="amount">Amount</string>
    <string name="send_to_meter">Send to Meter</string>
    <string name="send_sms">Send SMS</string>
    <string name="continue_puchase">Continue</string>
    <string name="confirm_purchase">Confirm</string>

    <string name="Bank_name">Bank Name</string>
    <string name="Bank_account_number">Bank Account Number</string>
    <string name="Bank_acount_type">Bank Acount Type</string>
    <string name="Bank_code">Bank Code</string>
    <string name="Bank_pin">Bank Pin</string>

    <string name="token_number">Token Number</string>
    <string name="header_send_token">Send Token</string>
    <string name="token_hostrory">Token History</string>
    <string name="buy_token">Buy Token</string>
    <string name="STS_test_settings">STS Test Settings</string>

    <string name="sts_factory_reset"> Factory Reset</string>
    <string name="sts_token_reset">Token Reset</string>
    <string name="sts_credit_max">Set Credit Max</string>
    <string name="sts_credit_zero">Set Credit Zero</string>
    <string name="sts_token_stack">Reset Token Stack</string>
    <string name="sts_meter_configurations">Meter Configurations</string>
    <string name="sts_meter_types">Test Types</string>


    <string name="sts_CTSD_UUT02">CTSD: UUT02</string>
    <string name="sts_CTSE_UUT01">CTSE:UUT01</string>
    <string name="sts_CTSE_UUT02">CTSE:UUT02</string>
    <string name="sts_CTSE_UUT03">CTSE:UUT03</string>

    <string name="sts_CTSF_UUT01">CTSF:UUT01</string>
    <string name="sts_CTSF_UUT02">CTSF:UUT02</string>
    <string name="sts_CTSF_UUT03">CTSF:UUT03</string>

    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="send_setting">Send Settings</string>



    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string-array name="titles">
        <item>Item 1</item>
        <item>Item 1</item>
        <item>Item 1</item>
        <item>Item 1</item>
        <item>Item 1</item>
        <item>Item 1</item>
        <item>Item 1</item>
        <item>Item 1</item>
        <item>Item 1</item>
        <item>Item 1</item>
        <item>Item 1</item>
        <item>Item 1</item>
        <item>Item 1</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="description">
        <item>Item 1</item>
        <item>Item 1</item>
        <item>Item 1</item>
        <item>Item 1</item>
        <item>Item 1</item>
        <item>Item 1</item>
        <item>Item 1</item>
        <item>Item 1</item>
        <item>Item 1</item>
        <item>Item 1</item>
        <item>Item 1</item>
        <item>Item 1</item>
        <item>Item 1</item>
    </string-array>


</resources>