<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_android_mobile_1"
    tools:context=".Activities.STSSettings">

    <TextView
        android:id="@+id/textHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/STS_test_settings"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063" />



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="585dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


       <LinearLayout
           android:orientation="vertical"
           android:layout_width="match_parent"
           android:layout_height="match_parent">

           <androidx.cardview.widget.CardView
               android:id="@+id/cardViewGraph1"
               android:layout_width="match_parent"
               android:layout_height="224dp"
               android:layout_margin="10sp"
               android:elevation="10dp"
               app:cardCornerRadius="10dp">

              <androidx.constraintlayout.widget.ConstraintLayout
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">

                  <Button
                      android:id="@+id/btn_set_credit_zero"
                      android:layout_width="119dp"
                      android:layout_height="45dp"
                      android:layout_margin="5sp"
                      android:shadowColor="@color/md_green_400"
                      android:text="@string/sts_credit_zero"
                      android:textSize="7sp"
                      app:layout_constraintBottom_toBottomOf="parent"
                      app:layout_constraintHorizontal_bias="0.03"
                      app:layout_constraintLeft_toLeftOf="parent"
                      app:layout_constraintRight_toRightOf="parent"
                      app:layout_constraintTop_toTopOf="parent"
                      app:layout_constraintVertical_bias="0.595" />

                  <Button
                      android:id="@+id/button2"
                      android:layout_width="119dp"
                      android:layout_height="45dp"
                      android:layout_margin="5sp"
                      android:shadowColor="@color/md_green_400"
                      android:text="@string/sts_credit_zero"
                      android:textSize="7sp"
                      app:layout_constraintBottom_toBottomOf="parent"
                      app:layout_constraintHorizontal_bias="0.956"
                      app:layout_constraintLeft_toLeftOf="parent"
                      app:layout_constraintRight_toRightOf="parent"
                      app:layout_constraintTop_toTopOf="parent"
                      app:layout_constraintVertical_bias="0.589" />

                  <Button
                      android:id="@+id/btn_set_credit_max"
                      android:layout_width="119dp"
                      android:layout_height="45dp"
                      android:layout_margin="5sp"
                      android:shadowColor="@color/md_green_400"
                      android:text="@string/sts_credit_max"
                      android:textSize="7sp"
                      app:layout_constraintBottom_toBottomOf="parent"
                      app:layout_constraintHorizontal_bias="0.956"
                      app:layout_constraintLeft_toLeftOf="parent"
                      app:layout_constraintRight_toRightOf="parent"
                      app:layout_constraintTop_toTopOf="parent"
                      app:layout_constraintVertical_bias="0.275" />

                  <TextView
                      android:id="@+id/textHeader2"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_centerInParent="true"
                      android:text="@string/sts_meter_configurations"
                      android:textColor="@color/md_blue_A200"
                      android:textSize="20sp"
                      app:layout_constraintBottom_toBottomOf="parent"
                      app:layout_constraintLeft_toLeftOf="parent"
                      app:layout_constraintRight_toRightOf="parent"
                      app:layout_constraintTop_toTopOf="parent"
                      app:layout_constraintVertical_bias="0.015" />

                  <Button
                      android:id="@+id/btn_reset_token_stack"
                      android:layout_width="119dp"
                      android:layout_height="45dp"
                      android:layout_margin="5sp"
                      android:shadowColor="@color/md_green_400"
                      android:text="@string/sts_token_stack"
                      android:textSize="7sp"
                      app:layout_constraintBottom_toBottomOf="parent"
                      app:layout_constraintHorizontal_bias="0.03"
                      app:layout_constraintLeft_toLeftOf="parent"
                      app:layout_constraintRight_toRightOf="parent"
                      app:layout_constraintTop_toTopOf="parent"
                      app:layout_constraintVertical_bias="0.292" />

                  <Button
                      android:id="@+id/btn_factory_reset"
                      android:layout_width="257dp"
                      android:layout_height="42dp"
                      android:layout_margin="5sp"
                      android:shadowColor="@color/md_blue_A200"
                      android:text="@string/sts_factory_reset"
                      android:textSize="10sp"
                      app:layout_constraintBottom_toBottomOf="parent"
                      app:layout_constraintHorizontal_bias="0.503"
                      app:layout_constraintLeft_toLeftOf="parent"
                      app:layout_constraintRight_toRightOf="parent"
                      app:layout_constraintTop_toTopOf="parent"
                      app:layout_constraintVertical_bias="0.912" />


              </androidx.constraintlayout.widget.ConstraintLayout>


           </androidx.cardview.widget.CardView>

           <androidx.cardview.widget.CardView
               android:id="@+id/cardViewGraph2"
               android:layout_width="match_parent"
               android:layout_height="255dp"
               android:layout_margin="10sp"
               android:elevation="10dp"
               app:cardCornerRadius="10dp">

               <androidx.constraintlayout.widget.ConstraintLayout
                   android:layout_width="match_parent"
                   android:layout_height="285dp">

                   <Button
                       android:id="@+id/btn_CTSE3"
                       android:layout_width="119dp"
                       android:layout_height="45dp"
                       android:layout_margin="5sp"
                       android:shadowColor="@color/md_green_400"
                       android:text="@string/sts_CTSE_UUT03"
                       android:textSize="10sp"
                       app:layout_constraintBottom_toBottomOf="parent"
                       app:layout_constraintHorizontal_bias="0.03"
                       app:layout_constraintLeft_toLeftOf="parent"
                       app:layout_constraintRight_toRightOf="parent"
                       app:layout_constraintTop_toTopOf="parent"
                       app:layout_constraintVertical_bias="0.818" />

                   <Button
                       android:id="@+id/btn_CTSE2"
                       android:layout_width="119dp"
                       android:layout_height="45dp"
                       android:layout_margin="5sp"
                       android:shadowColor="@color/md_green_400"
                       android:text="@string/sts_CTSE_UUT02"
                       android:textSize="10sp"
                       app:layout_constraintBottom_toBottomOf="parent"
                       app:layout_constraintHorizontal_bias="0.03"
                       app:layout_constraintLeft_toLeftOf="parent"
                       app:layout_constraintRight_toRightOf="parent"
                       app:layout_constraintTop_toTopOf="parent"
                       app:layout_constraintVertical_bias="0.547" />

                   <Button
                       android:id="@+id/btn_CTSE1"
                       android:layout_width="119dp"
                       android:layout_height="45dp"
                       android:layout_margin="5sp"
                       android:shadowColor="@color/md_green_400"
                       android:text="@string/sts_CTSE_UUT01"
                       android:textSize="10sp"
                       app:layout_constraintBottom_toBottomOf="parent"
                       app:layout_constraintHorizontal_bias="0.03"
                       app:layout_constraintLeft_toLeftOf="parent"
                       app:layout_constraintRight_toRightOf="parent"
                       app:layout_constraintTop_toTopOf="parent"
                       app:layout_constraintVertical_bias="0.295" />

                   <Button
                       android:id="@+id/btn_CTSF2"
                       android:layout_width="119dp"
                       android:layout_height="45dp"
                       android:layout_margin="5sp"
                       android:shadowColor="@color/md_green_400"
                       android:text="@string/sts_CTSF_UUT02"
                       android:textSize="10sp"
                       app:layout_constraintBottom_toBottomOf="parent"
                       app:layout_constraintHorizontal_bias="0.956"
                       app:layout_constraintLeft_toLeftOf="parent"
                       app:layout_constraintRight_toRightOf="parent"
                       app:layout_constraintTop_toTopOf="parent"
                       app:layout_constraintVertical_bias="0.551" />

                   <Button
                       android:id="@+id/btn_CTSF1"
                       android:layout_width="119dp"
                       android:layout_height="45dp"
                       android:layout_margin="5sp"
                       android:shadowColor="@color/md_green_400"
                       android:text="@string/sts_CTSF_UUT01"
                       android:textSize="10sp"
                       app:layout_constraintBottom_toBottomOf="parent"
                       app:layout_constraintHorizontal_bias="0.956"
                       app:layout_constraintLeft_toLeftOf="parent"
                       app:layout_constraintRight_toRightOf="parent"
                       app:layout_constraintTop_toTopOf="parent"
                       app:layout_constraintVertical_bias="0.295" />

                   <Button
                       android:id="@+id/btn_CTSF3"
                       android:layout_width="119dp"
                       android:layout_height="45dp"
                       android:layout_margin="5sp"
                       android:shadowColor="@color/md_green_400"
                       android:text="@string/sts_CTSF_UUT03"
                       android:textSize="10sp"
                       app:layout_constraintBottom_toBottomOf="parent"
                       app:layout_constraintHorizontal_bias="0.956"
                       app:layout_constraintLeft_toLeftOf="parent"
                       app:layout_constraintRight_toRightOf="parent"
                       app:layout_constraintTop_toTopOf="parent"
                       app:layout_constraintVertical_bias="0.818" />

                   <Button
                       android:id="@+id/btn_CTSD2"
                       android:layout_width="257dp"
                       android:layout_height="42dp"
                       android:layout_margin="5sp"
                       android:shadowColor="@color/md_blue_A200"
                       android:text="@string/sts_CTSD_UUT02"
                       android:textSize="10sp"
                       app:layout_constraintBottom_toBottomOf="parent"
                       app:layout_constraintHorizontal_bias="0.503"
                       app:layout_constraintLeft_toLeftOf="parent"
                       app:layout_constraintRight_toRightOf="parent"
                       app:layout_constraintTop_toTopOf="parent"
                       app:layout_constraintVertical_bias="0.135" />

                   <TextView

                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_centerInParent="true"
                       android:text="@string/sts_meter_types"
                       android:textColor="@color/md_blue_A200"
                       android:textSize="20sp"
                       app:layout_constraintBottom_toBottomOf="parent"
                       app:layout_constraintLeft_toLeftOf="parent"
                       app:layout_constraintRight_toRightOf="parent"
                       app:layout_constraintTop_toTopOf="parent"
                       app:layout_constraintVertical_bias="0.015" />


               </androidx.constraintlayout.widget.ConstraintLayout>

           </androidx.cardview.widget.CardView>


           <ProgressBar
               android:id="@+id/progressBar_STSSettings"
               style="?android:attr/progressBarStyleHorizontal"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:indeterminateTint="@color/md_blue_A200" />


       </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>