<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_android_mobile_1"
    android:weightSum="0">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/header_send_token"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.063" />

        <TextView
            android:id="@+id/txt_token_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="19dp"
            android:layout_marginBottom="10dp"
            android:text="@string/meter_cell_number"
            android:textColor="@color/md_blue_900"
            android:textSize="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.463"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.414" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="212dp"
            android:layout_weight="1"
            android:background="#Ffff"
            android:orientation="vertical"
            android:weightSum="5"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edit_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="19dp"
                    android:layout_marginRight="19dp"
                    android:background="@color/md_blue_100"
                    android:hint=""
                    android:inputType="numberDecimal"
                    android:textColor="@color/md_light_blue_900" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="19dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/meter_cell_number"

                    android:textColor="@color/md_blue_900"
                    android:textSize="12dp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edit_token_number"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="19dp"
                    android:layout_marginRight="19dp"
                    android:background="@color/md_blue_100"
                    android:hint=""
                    android:inputType="numberDecimal"
                    android:textColor="@color/md_light_blue_900" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="19dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/token_number"
                    android:textColor="@color/md_blue_900"
                    android:textSize="12dp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center">

                <Button
                    android:id="@+id/button_send_token"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="19dp"
                    android:layout_marginRight="19dp"
                    android:background="@color/md_blue_A200"
                    android:text="@string/header_send_token" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar_token"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/md_blue_A200" />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>